--- a/public/style.css
+++ b/public/style.css
@@ -249,7 +249,7 @@ footer .back-to-top:hover {
 /* HERO SECTION */
 .home-section {
   height: 100vh;
-  background: url('../images/homepage_bg.jpg') center/cover no-repeat;
+  background: url('/public/materials/logos/homepage_bg.jpg') center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -412,7 +412,7 @@ footer .back-to-top:hover {
 
 .intro-container .right .left-imagec img {
   width: 95%;
-  height: 100%;
+  height: 113%;
   object-fit: cover;
   border-radius: 6px;
 }
@@ -630,7 +630,7 @@ footer .back-to-top:hover {
   position: relative;
   width: 100%;
   height: 100vh; /* Adjust as needed */
-  background-image: url('../images/image_compilation/galleryplaceholder.jpg'); /* Replace with your own image */
+  background-image: url('/public/materials/image_compilation/galleryplaceholder.jpg'); /* Replace with your own image */
   background-size: cover;
   background-position: center;
   overflow: hidden;
